--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.9.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "serve": "^11.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
